--- a/app/src/components/SearchField.module.css
+++ b/app/src/components/SearchField.module.css
@@ -72,7 +72,7 @@
 }
 
 .rightSpacer {
-  width: 40px;
+  width: 44px;
   height: 44px;
 }
 
